# CSVAGENT

./: .env.example  .gitignore  Dockerfile  Dockerfile.disabled  README.md  docker-compose.yml.disabled  pyproject.toml  requirements.txt
app/: __init__.py  config.py  embeddings.py  llm.py  rate_limit.py  schemas.py  server.py
app/security/: __init__.py  repl_validation.py
app/services/: __init__.py  ask_quota.py  chat.py  chat_memory.py  conversation_context.py  conversation_summary.py  data_cache.py  dataset_agent.py  dataset_tool_router.py  datasets.py  doc_preview.py  ingestion.py  pdf_ocr.py  pdf_rag.py  sql_qa.py  tabular_ingestion.py  workspace_files.py
frontend-vite/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend-vite/src/: App.jsx  api.js  utils.js
frontend-vite/src/css/: styles.css
tests/: conftest.py  test_conversation_context.py  test_conversations.py  test_dataset_status.py  test_dataset_tool_router.py  test_health.py  test_limits.py  test_preview.py  test_sql_qa_unit.py  test_upload.py
